--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           go-version: 1.21 # 根据你的项目需要设置 Go 版本
 
+      - name: Set Git user information
+        run: |
+          git config --global user.email "1614355756@qq.com"
+          git config --global user.name "Fromsko"
+
       - name: Create Git Tag
         id: create_git_tag
         run: |
