--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   new_version: v0.1.6
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   release:
@@ -21,50 +22,32 @@ jobs:
         with:
           go-version: 1.21 # 根据你的项目需要设置 Go 版本
 
-      - name: Generate changelog
-        id: generate_changelog
-        run: |
-          new_version="${{ env.new_version }}"
-        shell: bash
-
-      - name: Create release on GitHub
+      - name: 发布release
         uses: docker://goreleaser/goreleaser:latest
         with:
           args: release
+    
+      - name: 初始化Git
+        run: |
+          git config --global user.email "1614355756@qq.com"
+          git config --global user.name "skong"
+          git remote set-url origin "https://github.com/Fromsko/gouitls.git"
+          git fetch origin
 
-      # - name: Create GitHub Release
-      #   id: create_release
-      #   run: |
-      #     echo "正在创建最新版本"
+      - name: 创建版本
+        run: |
+          git tag ${{ env.new_version }}
+          git push origin ${{ env.new_version }}
 
-      #     echo "获取新的版本号"
-      #     new_version="${{ env.new_version }}"
-      #     echo "${new_version}"
+      - name: 发布release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ env.new_version }}
+          release_name: Release ${{ env.new_version }}
+          body: |
+            This is the release notes for ${{ env.new_version }}.
+          draft: false
+          prerelease: false
 
-      #     # 生成更新日志内容
-      #     changelog="${{ steps.generate_changelog.outputs.changelog }}"
 
-      #     # 创建 GitHub Release
-      #     release_id=$(curl -X POST "https://api.github.com/repos/${{ github.repository }}/releases" \
-      #       -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-      #       -d '{
-      #         "tag_name": "'"$new_version"'",
-      #         "name": "Release '"$new_version"'",
-      #         "body": "'"$changelog"'",
-      #         "draft": false,
-      #         "prerelease": false
-      #       }' | jq -r '.id')
 
-      #     echo "GitHub release created with ID: $release_id"
-
-      #     # 打包源码文件，例如将项目文件打包成 tar.gz 或 zip 文件
-      #     tar -czf source-code-${new_version}.tar.gz .
-      #     # 也可以使用 zip 命令，视项目需要而定
-
-      #     # 将源码包上传到 GitHub Release
-      #     curl -X POST "https://uploads.github.com/repos/${{ github.repository }}/releases/${release_id}/assets?name=source-code-${new_version}.tar.gz" \
-      #       -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-      #       --header "Content-Type: application/octet-stream" \
-      #       --upload-file source-code-${new_version}.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
