--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           git config --global user.email "1614355756@qq.com"
           git config --global user.name "skong"
+          git config --global credential.helper store
           git remote set-url origin "https://github.com/Fromsko/gouitls.git"
           git fetch origin
 
