--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,50 +1,34 @@
-name: AutoChange
+name: Goreleaser
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - '*'
 
-env:
-  new_version: v0.1.6
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+permissions:
+  contents: write
 
 jobs:
-  release:
+  goreleaser:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Go
-        uses: actions/setup-go@v2
+      -
+        name: Checkout
+        uses: actions/checkout@v4
         with:
-          go-version: 1.21
-
-      # - name: 发布release
-      #   uses: docker://goreleaser/goreleaser:latest
-      #   with:
-      #     args: release
-    
-      # - name: 创建版本
-      #   run: |
-      #     git config --global user.email "1614355756@qq.com"
-      #     git config --global user.name "skong"
-      #     git remote set-url origin "https://github.com/Fromsko/gouitls.git"
-      #     git fetch origin
-      #     git tag ${{ env.new_version }}
-      #     git push origin ${{ env.new_version }} --force
-
-      - name: 发布release
-        uses: actions/create-release@v1
+          fetch-depth: 0
+      -
+        name: Set up Go
+        uses: actions/setup-go@v5
         with:
-          tag_name: ${{ env.new_version }}
-          release_name: Release ${{ env.new_version }}
-          body: |
-            This is the release notes for ${{ env.new_version }}.
-          draft: false
-          prerelease: false
-
-
-
+          go-version: 1.20
+      -
+        name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v5
+        with:
+          # either 'goreleaser' (default) or 'goreleaser-pro'
+          distribution: goreleaser
+          version: latest
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
