--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,6 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: release --snapshot --skip-publish
+          args: release --snapshot --skip-validate --skip-build --skip-publish-notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
